# slambook2

./: make_thirdparty.sh
ch3/: plotTrajectory
ch3/examples/: coordinateTransform.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/visualizeGeometry/: visualizeGeometry.cpp
ch4/: trajectoryError
ch4/example/: trajectoryError.cpp
ch5/imageBasics/: imageBasics  undistortImage
ch5/image_bianli/: CMakeLists.txt  image_bianli.cpp
ch5/rgbd/: joinMap
ch5/stereo/: stereoVision  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting2.cpp
ch6/my_guassNewton/: gaussNewton.cpp
ch7/: notes.md  orb_self.cpp  pose_estimation_2d2d
